--- a/public/globe.html
+++ b/public/globe.html
@@ -18,7 +18,7 @@
 <body>
 <!-- Modified from  annotated source code http://jsfiddle.net/4wkFu/ -->
 <div id="ball"></div>
-<script src="/public/js/lib/threejs/three.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/three.js/r54/three.min.js"></script>
   <script src="/public/js/globe.js"></script>
 </body>
 
