--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/coin.html">Latest Website</a>
+                      <a href="http://180io.com/public/comet.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -364,9 +364,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                       <a href="http://180io.com/public/explosivedrawing.html" target="_blank">Day One Hundred Fifty Nine - Explosive Drawing<br></a>
                                                       <a href="http://180io.com/public/silk.html" target="_blank">Day One Hundred Sixty - Silk<br></a>
                                                       <a href="http://180io.com/public/coin.html" target="_blank">Day One Hundred Sixty One - Coin<br></a>
-                                                      <!--<a href="http://180io.com/public/comet.html" target="_blank">Day One Hundred Sixty Two - Comet<br></a>
-                                                      <a href="http://180io.com/public/gravity.html" target="_blank">Day One Hundred Sixty Three - Gravity<br></a>
-                                                      <a href="http://180io.com/public/randomgradient.html" target="_blank">Day One Hundred Sixty Four - Random Gradient<br></a>-->
+                                                      <a href="http://180io.com/public/comet.html" target="_blank">Day One Hundred Sixty Two - Comet<br></a>
+                                                      <!--<a href="http://180io.com/public/gravity.html" target="_blank">Day One Hundred Sixty Three - Gravity<br></a>
+                                                      <a href="http://180io.com/public/randomgradient.html" target="_blank">Day One Hundred Sixty Four - Random Gradient<br></a>
+                                                      <a href="http://180io.com/public/globe.html" target="_blank">Day One Hundred Sixty Five - Globe<br></a>-->
 								</div>
               </div>
             </div>
@@ -394,7 +395,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>161</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>162</em> are done</span></h1>
               </div>
             </div>
           </div>
