--- a/public/paint.html
+++ b/public/paint.html
@@ -18,7 +18,7 @@
 <body>
 <!-- Modified from and awesome Paperjs Tutorial -->
 <canvas id="canv">Your Browser Does not Support Canvas, try this with Chrome.</canvas>
-<script type="text/javascript" src="/public/lib/paper.min.js"></script>
+<script type="text/javascript" src="/public/js/lib/paper.min.js"></script>
   <script  type="text/paperscript" src="/public/js/paint.js"></script>
 </body>
 
