--- a/public/paint.html
+++ b/public/paint.html
@@ -19,7 +19,7 @@
 <!-- Modified from and awesome Paperjs Tutorial -->
 <canvas id="canv">Your Browser Does not Support Canvas, try this with Chrome.</canvas>
 <script type="text/javascript" src="/public/js/lib/paper.min.js"></script>
-  <script  type="text/paperscript" src="/public/js/paint.js"></script>
+  <script  type="text/paperscript" src="/public/js/paint.js" canvas = "canv"></script>
 </body>
 
 </html>
