--- a/public/bubble2.html
+++ b/public/bubble2.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Kabir Shah">
 
   <title>Bubble 2.0</title>
-  <link rel="stylesheet" type="text/css" href="/public/css/bubble.css" />
+  <link rel="stylesheet" type="text/css" href="/public/css/bubble2.css" />
   <link rel="shortcut icon" type="image/png" href="/favicon.png" />
   <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png" />
   <script src="/public/js/analytics.js"></script>
@@ -18,7 +18,7 @@
 <body>
 <h1 id="score"></h1>
 <canvas id="canv"></canvas>
-  <script type="text/paperscript" src="/public/js/bubble.js"></script>
+  <script type="text/paperscript" src="/public/js/bubble2.js"></script>
 </body>
 
 </html>
