--- a/public/bubble2.html
+++ b/public/bubble2.html
@@ -18,7 +18,7 @@
 <body>
 <h1 id="score"></h1>
 <canvas id="canv"></canvas>
-  <script type="text/paperscript" src="/public/js/bubble2.js"></script>
+  <script type="text/javascript" src="/public/js/bubble2.js"></script>
 </body>
 
 </html>
