--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/avoid.html">Latest Website</a>
+                      <a href="http://180io.com/public/pop.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -371,9 +371,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                        <a href="http://180io.com/public/paint.html" target="_blank">Day One Hundred Sixty Six - Paint<br></a>
                                                        <a href="http://180io.com/public/bubble2.html" target="_blank">Day One Hundred Sixty Seven - Bubble 2.0<br></a>
                                                        <a href="http://180io.com/public/avoid.html" target="_blank">Day One Hundred Sixty Eight - Avoid<br></a>
-                                                        <!--<a href="http://180io.com/public/pop.html" target="_blank">Day One Hundred Sixty Nine - Pop<br></a>
-                                                        <a href="http://180io.com/public/grass.html" target="_blank">Day One Hundred Seventy - Grass<br></a>
-                                                        <a href="http://180io.com/public/vowel.html" target="_blank">Day One Hundred Seventy One - Vowel<br></a>-->
+                                                        <a href="http://180io.com/public/pop.html" target="_blank">Day One Hundred Sixty Nine - Pop<br></a>
+                                                        <!--<a href="http://180io.com/public/grass.html" target="_blank">Day One Hundred Seventy - Grass<br></a>
+                                                        <a href="http://180io.com/public/vowel.html" target="_blank">Day One Hundred Seventy One - Vowel<br></a>
+                                                        <a href="http://180io.com/public/drawtentacles.html" target="_blank">Day One Hundred Seventy Two - Draw Tentacles<br></a>-->
 								</div>
               </div>
             </div>
@@ -401,7 +402,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>168</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>169</em> are done</span></h1>
               </div>
             </div>
           </div>
