--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">The 180 Day Project</h1>
-                <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
+                <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a> Also, Due to Lots of requests, I will be making bonus websites. These may go up to any number!
                   </p>
                   <h1>
                       <a href="http://180io.com/public/pop.html">Latest Website</a>
