--- a/public/etch.html
+++ b/public/etch.html
@@ -17,6 +17,7 @@
 
 <body>
 <canvas id="canv"></canvas>
+<script src="/public/js/lib/paper.min.js"></script>
   <script type="text/paperscript" src="/public/js/etch.js" canvas="canv"></script>
 </body>
 
