--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 X in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a> Also, Due to Lots of requests, I will be making bonus websites. These may go up to any number!
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/drawtentacles.html">Latest Website</a>
+                      <a href="http://180io.com/public/etch.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -375,8 +375,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                         <a href="http://180io.com/public/grass.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy - Grass<br></a>
                                                        <a href="http://180io.com/public/vowel.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy One - Vowel<br></a>
                                                          <a href="http://180io.com/public/drawtentacles.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Two - Draw Tentacles<br></a>
-                                                        <!--<a href="http://180io.com/public/etch.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Three - Etch A Sketch<br></a>
-                                                        <a href="http://180io.com/public/starwarsname.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Four - Star Wars Name<br></a>-->
+                                                        <a href="http://180io.com/public/etch.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Three - Etch A Sketch<br></a>
+                                                        <!--<a href="http://180io.com/public/starwarsname.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Four - Star Wars Name<br></a>
+                                                        <a href="http://180io.com/public/password.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Five - Password Generator<br></a>-->
 								</div>
               </div>
             </div>
@@ -404,7 +405,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>172</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>173</em> are done</span></h1>
               </div>
             </div>
           </div>
