--- a/public/password.html
+++ b/public/password.html
@@ -17,7 +17,7 @@
 
 <body>
 <h1 id="pass">Password Generator</h1>
-<button class="btn btn-outline">Generate</button>
+<button class="btn btn-outline" id="btn">Generate</button>
   <script type="text/javascript" src="/public/js/password.js"></script>
 </body>
 
