--- a/public/mood.html
+++ b/public/mood.html
@@ -16,7 +16,7 @@
 </head>
 
 <body id="body">
-  <h1>Get A Color For Your Mood</h1>
+  <h1 id="instr">Get A Color For Your Mood</h1>
 <input type="text" placeholder="How do you feel?" id="input"/>
   <script type="text/javascript" src="/public/js/mood.js"></script>
 </body>
