--- a/public/squeeze.html
+++ b/public/squeeze.html
@@ -18,6 +18,7 @@
 <body>
   <canvas id="canv"></canvas>
 <script type="text/javascript" src="/public/js/lib/paper.min.js"></script>
+<script src="http://paperjs.org/assets/js/rhill-voronoi-core.js"></script>
   <script type="text/paperscript" src="/public/js/squeeze.js" canvas="canv"></script>
 </body>
 
