--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">The 180 Day Project</h1>
-                <p>Hi! I am Kabir and I am learning to code by building 180 X in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a> Also, Due to Lots of requests, I will be making bonus websites. These may go up to any number!
+                <p>Hi! I am Kabir and I am learning to code by building 180 Things in 180 days! These 180 Things will be like this: 180 Websites, then 180 UI Components, then 180 Web Apps (You can sign up and login) Hopefully it succeeds! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a> 
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/mood.html">Latest Website</a>
+                      <a href="http://180io.com/public/squeeze.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -379,8 +379,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                         <a href="http://180io.com/public/starwarsname.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Four - Star Wars Name<br></a>
                                                         <a href="http://180io.com/public/password.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Five - Password Generator<br></a>
                                                         <a href="http://180io.com/public/mood.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Six - Mood<br></a>
-                                                        <!--<a href="http://180io.com/public/squeeze.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Seven - Squeeze<br></a>
-                                                        <a href="http://180io.com/public/drag.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Eight - Drag<br></a>-->
+                                                        <a href="http://180io.com/public/squeeze.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Seven - Squeeze<br></a>
+                                                        <!--<a href="http://180io.com/public/drag.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Eight - Drag<br></a>
+                                                        <a href="http://180io.com/public/drag.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Nine - Drag<br></a>-->
 								</div>
               </div>
             </div>
@@ -408,7 +409,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>176</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>177</em> are done</span></h1>
               </div>
             </div>
           </div>
