--- a/public/snake.html
+++ b/public/snake.html
@@ -19,7 +19,7 @@
   <!-- Taken From a Tutorial: http://thecodeplayer.com/walkthrough/html5-game-tutorial-make-a-snake-game-using-html5-canvas-jquery -->
 <canvas id="canv"></canvas>
 <script type="text/javascript" src="/public/js/lib/jquery.min.js"></script>
-  <script type="text/javascript" src="/public/js/ascii.js"></script>
+  <script type="text/javascript" src="/public/js/snake.js"></script>
 </body>
 
 </html>
