--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
+              	<h1>180 Websites</h1>
 								<div id="sites">
 								                      <a  href="/public/about.html" target="_blank" class="wow animated fadeIn">Day One - About<br></a>
                            <a href="http://180io.com/public/randomcolor.html" target="_blank" class="wow animated fadeIn">Day Two - Random Color<br></a>
@@ -381,7 +382,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                         <a href="http://180io.com/public/mood.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Six - Mood<br></a>
                                                         <a href="http://180io.com/public/squeeze.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Seven - Squeeze<br></a>
                                                         <!--<a href="http://180io.com/public/drag.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Eight - Drag<br></a>
-                                                        <a href="http://180io.com/public/drag.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Nine - Drag<br></a>-->
+                                                        <a href="http://180io.com/public/snake.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Nine - Snake<br></a>
+                                                        <a href="http://180io.com/public/hello.html" target="_blank" class="wow animated fadeIn">Day One Hundred Eighty - Hello<br></a>-->
 								</div>
               </div>
             </div>
