--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
-              	<h1>180 Websites</h1>
+              	<h1 class="text-center">180 Websites</h1>
 								<div id="sites">
 								                      <a  href="/public/about.html" target="_blank" class="wow animated fadeIn">Day One - About<br></a>
                            <a href="http://180io.com/public/randomcolor.html" target="_blank" class="wow animated fadeIn">Day Two - Random Color<br></a>
