--- a/public/hello.html
+++ b/public/hello.html
@@ -9,7 +9,7 @@
 
   <title>Hello</title>
   <link rel="stylesheet" type="text/css" href="/public/css/hello.css" />
-  <link rel="stylesheet" type="text/css" href="/public/css/lib/my/feather.min.css
+  <link rel="stylesheet" type="text/css" href="/public/css/lib/my/feather.min.css"/>
   <link rel="shortcut icon" type="image/png" href="/favicon.png" />
   <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png" />
   <script src="/public/js/analytics.js"></script>
