--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
           </p>
           <h1>
-                      <a href="http://180io.com/public/snake.html">Latest Website</a>
+                      <a href="http://180io.com/public/hello.html">Latest Website</a>
                   </h1>
         </div>
       </div>
@@ -387,7 +387,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             <a href="http://180io.com/public/squeeze.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Seven - Squeeze<br></a>
             <a href="http://180io.com/public/drag.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Eight - Drag<br></a>
             <a href="http://180io.com/public/snake.html" target="_blank" class="wow animated fadeIn">Day One Hundred Seventy Nine - Snake<br></a>
-            <!--<a href="http://180io.com/public/hello.html" target="_blank" class="wow animated fadeIn">Day One Hundred Eighty - Hello<br></a>-->
+            <a href="http://180io.com/public/hello.html" target="_blank" class="wow animated fadeIn">Day One Hundred Eighty - Hello<br></a>
+            <!--<a href="http://180io.com/" target="_blank" class="wow animated fadeIn">Day ___ - ____<br></a>-->
           </div>
           <h1 class="text-center">180 Web Apps <i class="fa fa-smile-o"></i></h1>
         </div>
@@ -416,7 +417,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>I got 180 problems<span>but <em>179</em> are done</span></h1>
+          <h1>I got 180 problems<span>but <em>180</em> are done</span></h1>
         </div>
       </div>
     </div>
