--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             <a href="http://180io.com/public/hello.html" target="_blank" class="wow animated fadeIn">Day One Hundred Eighty - Hello<br></a>
             <!--<a href="http://180io.com/" target="_blank" class="wow animated fadeIn">Day ___ - ____<br></a>-->
           </div>
-          <h1 class="text-center">180 Web Apps <i class="fa fa-smile-o"></i></h1>
+          <h1 class="text-center">180 Web Apps in 180 Days - Starting Soon<i class="fa fa-smile-o"></i></h1>
         </div>
       </div>
     </div>
