--- a/public/fireworks2.html
+++ b/public/fireworks2.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" type="text/css" href="/public/css/fireworks2.css" />
 	</head>
 	<body>
+		<!-- Code is from tutorial by Jack Rugile http://thecodeplayer.com/walkthrough/canvas-fireworks-tutorial-->
 	<canvas id="canvas"></canvas>
 		<script src="/public/js/fireworks2.js"></script>
 	</body>
