--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <a href="http://180io.com/public/hello.html" target="_blank" class="wow animated fadeIn">Day One Hundred Eighty - Hello<br></a>
             <!--<a href="http://180io.com/" target="_blank" class="wow animated fadeIn">Day ___ - ____<br></a>-->
           </div>
-          <h1 class="text-center">180 Web Apps in 180 Days - Starting Soon<i class="fa fa-smile-o"></i></h1>
+          <!--<h1 class="text-center">180 Web Apps in 180 Days - Starting Soon<i class="fa fa-smile-o"></i></h1>-->
         </div>
       </div>
     </div>
